# django-password-manager

./: .env.example  .gitignore  README.md  pyproject.toml  run_app.bat
password_manager/: manage.py
password_manager/main/: forms.py  models.py  signals.py  sync_manager.py  utils.py  views.py
password_manager/main/cloud_db/: mongo_client.py
password_manager/main/migrations/: 0001_initial.py  0002_rename_name_passwordentry_login_and_more.py
password_manager/main/templates/: create_password.html  delete.html  index.html
password_manager/password_manager/: asgi.py  settings.py  urls.py  wsgi.py
